@@ -210,14 +210,15 @@
 
     /**
      * This is another, more advanced format to define Orthanc
-     * peers. It notably allows to specify a HTTPS client certificate
-     * in the PEM format (as in the "--cert" option of curl), or to
-     * enable PKCS#11 authentication for smart cards.
+     * peers. It notably allows to specify HTTP headers, a HTTPS
+     * client certificate in the PEM format (as in the "--cert" option
+     * of curl), or to enable PKCS#11 authentication for smart cards.
      **/
     // "peer" : {
     //   "Url" : "http://127.0.0.1:8043/",
     //   "Username" : "alice",
     //   "Password" : "alicePassword",
+    //   "HttpHeaders" : { "Token" : "Hello world" },
     //   "CertificateFile" : "client.crt",
     //   "CertificateKeyFile" : "client.key",
     //   "CertificateKeyPassword" : "certpass",
